# leduc-poker-escher-architecture-experiments

./: .gitignore  CODE_REVIEW.md  README.md  TESTING.md  TODO.md  project.toml  pyproject.toml  requirements.txt
adaptive_escher/: __init__.py  estimator.py  solver.py
advantage_sampling_escher/: __init__.py  solver.py
docs/: GCP_BATCH_EXPERIMENTS.md  OUTPUT_CONVENTIONS.md  THESIS_ARTIFACTS.md
escher_poker/: __init__.py  ablation_plotting.py  chart_titles.py  checkpoint_analysis.py  checkpoint_plotting.py  constants.py  experiment_utils.py  factorial_metrics.py  fixed_sampling.py  hyperparameter_search.py  networks.py  plotting.py  policy_snapshots.py  regret_target_processing.py  regret_targets.py  replay.py  seeding.py  solver.py
fast_slow_escher/: __init__.py  solver.py
gcp/: read_batch_task_logs.sh  submit_batch_experiment.sh
monte_carlo_escher/: __init__.py  solver.py
parallel_multi_action_escher/: __init__.py  solver.py
scripts/: promote_thesis_artifacts.py
tests/: __init__.py  test_adaptive_residual_predictive_escher.py  test_adaptive_residual_predictive_escher_5x_nodes.py  test_adaptive_residual_predictive_escher_forensics.py  test_advantage_variance_sampling_escher.py  test_chart_titles.py  test_escher_candidate_architecture_multiseed_config.py  test_escher_fixed_sampling.py  test_escher_regret_replay_buffers.py  test_escher_regret_target_scale_processing.py  test_escher_regret_targets.py  test_escher_vs_vr_deep_cfr_5x_config.py  test_escher_vs_vr_deep_cfr_config.py  test_experiments_7_to_12_batch_documentation.py  test_factorial_metrics.py  test_fast_slow_control_critic_escher.py  test_imports.py  test_monte_carlo_control_critic_escher.py  test_parallel_multi_action_residual_escher.py  test_promote_thesis_artifacts.py  test_unbiased_control_variate_escher.py  test_unbiased_control_variate_escher_lean_ablation.py  test_unbiased_escher_vs_vr_deep_cfr_15m_nodes.py
unbiased_escher/: __init__.py  estimator.py  solver.py
vr_deep_cfr/: UPSTREAM.md  __init__.py  logger.py  solver.py  (+1 more)
(+63 files in other folders)
