[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leduc-poker-escher-architecture-experiments"
version = "0.1.0"
description = "Model-free ESCHER architecture experiments for Leduc poker"
requires-python = ">=3.9,<3.10"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "adaptive_escher",
  "adaptive_escher.*",
  "escher_poker",
  "escher_poker.*",
  "experiments",
  "experiments.*",
  "unbiased_escher",
  "unbiased_escher.*",
  "vr_deep_cfr",
  "vr_deep_cfr.*",
]
exclude = [
  "outputs*",
  "notebooks*",
  "thesis_artifacts*",
  "gcp*",
  "tests*",
]

[tool.setuptools.package-data]
"experiments.leduc_poker.adaptive_residual_predictive_escher" = [
  "README.md",
  "experiment1_checkpoint_curves.csv",
]
"experiments.leduc_poker.adaptive_residual_predictive_escher_5x_nodes" = [
  "README.md",
  "experiment2_checkpoint_curves.csv",
]
"experiments.leduc_poker.adaptive_residual_predictive_escher_forensics" = [
  "README.md",
]
"experiments.leduc_poker.unbiased_control_variate_escher_5x_nodes" = [
  "README.md",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: end-to-end smoke tests",
]
